--- a/sisfac/sisfac-web/src/main/webapp/resources/css/sisfac.css
+++ b/sisfac/sisfac-web/src/main/webapp/resources/css/sisfac.css
@@ -1,9 +1,10 @@
 @charset "UTF-8";
 
 .etiqueta{
-	font-size: 11px;
+	font-family: 'Montserrat', sans-serif;
+	font-size: 14px !important;
 	font-weight: bold;
-	color: blue;
+	color: #52928e !important;
 }
 
 .ui-widget-header{
@@ -32,3 +33,27 @@
 .icon_delete{
 	background: url("#{facesContext.externalContext.request.contextPath}/resources/img/icoDelete16x16.png")!important;
 }
+
+/*Estilo para campos de texto*/
+
+.ui-inputfield {
+	width: 250px!important;
+	font-size: 13px !important;
+}
+
+input[readonly]{
+	background-color: gray!important;
+	color: white!important;
+}
+
+/*Estilo para el datatable*/
+.ui-datatable{
+	font-size: 14px !important;
+	text-align: center !important;
+}
+
+.ui-datatable .ui-state-highlight{
+	background: none !important;
+	background-color: #b0d9d6 !important;
+}
+
