--- a/sisfac/sisfac-ear/.settings/org.eclipse.wst.common.component
+++ b/sisfac/sisfac-ear/.settings/org.eclipse.wst.common.component
@@ -8,5 +8,11 @@
         <dependent-module archiveName="sisfac-ejb-1.0.jar" deploy-path="/" handle="module:/resource/sisfac-ejb/sisfac-ejb">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="junit-4.13-beta-1.jar" deploy-path="/lib" handle="module:/classpath/var/M2_REPO/junit/junit/4.13-beta-1/junit-4.13-beta-1.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="hamcrest-core-1.3.jar" deploy-path="/lib" handle="module:/classpath/var/M2_REPO/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
     </wb-module>
 </project-modules>
